# deadline-cloud

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  THIRD_PARTY_LICENSES  hatch.toml  hatch_custom_hook.py  hatch_version_hook.py  pyproject.toml  requirements-installer.txt  requirements-integ-testing.txt  requirements-release.txt  requirements-testing.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  doc.yml  feature_request.yml  maintenance.yml
.github/scripts/: get_latest_changelog.py
.github/workflows/: auto_approve.yml  code_quality.yml  codeql.yml  e2e_test.yml  integ_test.yml  mainline_integration_test.yml  publish_release.yml  release.yml  release_bump.yml  release_publish.yml  reuse_python_build.yml
.semantic_release/: CHANGELOG.md.j2
docs/: code_organization.md  telemetry.md
examples/: README.md  download_cancel_test.py  download_output.py  submit_job.py  sync_inputs_with_step_deps.py  upload_cancel_test.py  upload_scale_test.py
examples/job_attachments/: download_manifest_and_attachments.sh  manifest_snapshot.sh  manifest_snapshot_diff.sh  manifest_snapshot_diff_upload.sh  snapshot_glob.sh
pipeline/: CODEOWNERS  build.sh  e2e.sh  integ.ps1  integ.sh  publish.sh
scripted_tests/: README.md  download_cancel_test.py  set_file_permission_for_windows.py  upload_cancel_test.py  upload_scale_test.py
scripts/: README.md  add_copyright_headers.sh  run_sudo_tests.sh
scripts/pyinstaller/: deadline.py  deadline.spec  deadline_cli.spec  make_exe.py
src/deadline/: __main__.py
src/deadline/client/: __init__.py  exceptions.py
src/deadline/client/api/: __init__.py  _attachment.py  _get_storage_profile_for_queue.py  _job_attachment.py  _list_apis.py  _loginout.py  _queue_parameters.py  _session.py  _submit_job_bundle.py  _telemetry.py
src/deadline/client/cli/: __init__.py  _common.py  _deadline_cli.py  _deadline_web_url.py  deadline_cli.py  deadline_cli_main.py  deadline_credentials_status.py  deadline_dev_gui_main.py
src/deadline/client/config/: __init__.py  config_file.py
src/deadline/client/job_bundle/: __init__.py  _utils.py  adaptors.py  job_template.py  loader.py  parameters.py  saver.py  submission.py
src/deadline/client/ui/: __init__.py  cli_job_submitter.py  deadline_authentication_status.py  deadline_credentials_status.py  dev_application.py  job_bundle_submitter.py
src/deadline/client/util/: __init__.py  callback_loader.py  create_job_bundle_callback.py  post_submit_callback.py  ui_callback.py
src/deadline/job_attachments/: README.md  __init__.py  _diff.py  _glob.py  _utils.py  asset_sync.py  download.py  errors.py  exceptions.py  fus3.py  hash_cache.py  models.py  os_file_permission.py  progress_tracker.py  upload.py  utils.py  vfs.py
src/deadline/job_attachments/_aws/: aws_clients.py  aws_config.py  deadline.py
src/deadline/job_attachments/_windows/: file.py
src/deadline/job_attachments/api/: __init__.py  attachment.py  manifest.py
src/deadline/job_attachments/asset_manifests/: __init__.py  _canonical_json.py  _create_manifest.py  base_manifest.py  decode.py  hash_algorithms.py  manifest_model.py  versions.py
src/deadline/job_attachments/aws/: deadline.py
src/deadline/job_attachments/caches/: __init__.py  cache_db.py  hash_cache.py  s3_check_cache.py
src/deadline/job_attachments/windows/: file.py
src/deadline_job_attachments/: __init__.py  asset_sync.py  errors.py  models.py  progress_tracker.py  utils.py
test/: test_copyright_headers.py
test/deadline_client/unit/: shared_constants.py  testing_utilities.py
test/deadline_client/unit/api/: test_api_job.py  test_api_session.py  test_api_storage_profile.py  test_job_bundle_submission.py  test_job_bundle_submission_asset_refs.py  test_job_bundle_submission_asset_refs_deprecated_uihint.py
test/deadline_client/unit/cli/: test_cli.py  test_cli_config.py  test_cli_fleet.py  test_cli_job.py  test_cli_loginout.py  test_cli_queue.py
test/deadline_client/unit/config/: test_config_file.py
test/deadline_client/unit/job_bundle/: test_adaptors.py  test_job_bundle_loader_deprecated_uihint.py  test_job_parameters.py  test_job_submission.py  test_job_template.py
test/deadline_job_attachments/integ/: test_job_attachments.py
test/deadline_job_attachments/unit/: conftest.py  test_asset_sync.py  test_download.py  test_hash_cache.py  test_upload.py
test/deadline_job_attachments/unit/asset_manifests/: test_decode.py  test_manifest_model.py
test/deadline_job_attachments/unit/aws/: test_aws_clients.py  test_deadline.py
test/deadline_job_attachments/unit/data/: manifest_v2022_06_06.json  manifest_v2023_03_03.json
test/integ/: conftest.py
test/integ/cli/: test_cli_asset.py  test_cli_attachment.py  test_cli_manifest.py  test_cli_manifest_snapshot.py  test_cli_manifest_upload.py
test/integ/deadline_job_attachments/: conftest.py  test_job_attachments.py
test/squish/deadline_cloud_samples/blender_render/: template.yaml
test/squish/deadline_cloud_samples/turntable_with_maya_arnold/: README.md  template.yaml
test/squish/jobbundle_testfiles/chicken_job/: asset_references.yaml  parameter_values.yaml  template.yaml
test/squish/suite_DCCSubmittersDialogue/: envvars  suite.conf
test/squish/suite_DCCSubmittersDialogue/tst_VerifyBlenderSubmitter/: test.py
test/squish/suite_VerifySettingsDialog/: envvars  suite.conf
test/squish/suite_VerifySettingsDialog/tst_VerifySettingsDialog/: test.py
test/squish/suite_VerifySettingsDialog/tst_VerifySettingsDialogue/: test.py
test/squish/suite_VerifySettingsDialogue/: envvars  suite.conf
test/unit/: conftest.py  test_copyright_headers.py
test/unit/deadline_client/: __init__.py  conftest.py  shared_constants.py
test/unit/deadline_client/cli/: test_cli.py  (+15 more)
test/unit/deadline_job_attachments/: conftest.py  test_asset_sync.py  test_download.py  test_fus3.py  test_glob.py  test_hash_cache.py  test_models.py  test_progress_tracker.py  test_upload.py  test_utils.py  test_vfs.py
testing_containers/localuser_sudo_environment/: Dockerfile  README.md  run_tests.sh
(+122 files in other folders)
